refactor(algorithm): AlgorithmFactory를 AlgorithmType 기반으로 리팩토링
- switch 문 제거 (41줄 → 28줄, 32% 감소)
- AlgorithmType Enum 사용으로 OCP 준수
- getAvailableAlgorithms()가 Enum에서 자동 생성
- 중복 제거: 알고리즘 목록이 한 곳에만 존재
- getAlgorithmTypes() 메서드 추가로 메타데이터 접근 가능
- 모든 기존 테스트 통과